fixed image centering when product modal is open on mobile

--- a/src/components/ProductModal/ProductModal.less
+++ b/src/components/ProductModal/ProductModal.less
@@ -58,6 +58,7 @@
     position: relative;
     background: linear-gradient(to bottom, #1f2123 0%, #323232 100%);
     display: flex;
+    width: 100%;
     align-items: center;
     justify-content: center;
     overflow: hidden;
